--- a/learn/package.json
+++ b/learn/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
+    "marked": "^4.0.17",
     "vue": "^3.2.37"
   },
   "devDependencies": {
